2013-11-15  Niibe Yutaka  <gniibe@fsij.org>

	* src/configure (options): Add --enable-sys1-compat.

2013-11-12  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx: Upgrade to 0.03.

	* src/usb_desc.c (usb_initial_feature): Remove.
	(USB_SELF_POWERED): Move to ...
	* src/usb_conf.h (USB_SELF_POWERED): ... here.
	* src/usb_ctrl.c (usb_cb_device_reset, usb_intr): Follow the
	change.

2013-11-11  Niibe Yutaka  <gniibe@fsij.org>

	* src/adc_stm32f103.c (adc_wait_completion): Update from NeuG 1.0.

2013-11-03  Niibe Yutaka  <gniibe@fsij.org>

	* regnual/regnual.c (usb_cb_get_descriptor): Update to new API.

	* src/usb_lld.h (usb_initial_feature): Remove.

	* chopstx: Update to 0.01.
	* src/pin-cir.c: Chatter fix to 200ms.
	* src/main.c: Fix bDeviceState.

2013-11-02  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb_lld.h, src/usb_stm32f103.c (std_get_descriptor): Change
	the API of usb_cb_get_descriptor.
	* src/usb_desc.c: Follow the change.
	* src/usb_conf.h: Modify for CCID INT and HID usage.

2013-11-02  Niibe Yutaka  <gniibe@fsij.org>

	* src/pin-cir.c: Port to Chopstx.

	* chopstx: Update.
	* src/configure (TIM_SIZE, EXT_SIZE): New.
	* src/gnuk.ld.in (__process6_stack_size__)
	(__process7_stack_size__): New.
	* src/main.c (main): Call cir_init.
	* src/openpgp.c (openpgp_card_thread): Rename from GPGthread.
	* src/usb-icc.c (icc_power_on): Follow the change.

2013-11-01  Niibe Yutaka  <gniibe@fsij.org>

	* src/sys.c: Update from Chopstx.
	* src/usb_lld.h: Remove interrupt definition.
	* src/stm32f103.h: Add AFIO, EXTI, and TIMER constants.

2013-10-31  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (main): Call msc_init before USB interrupt thread.
	* src/gnuk.h, src/usb-msc.h, src/usb-msc.c, src/pin-dnd.c: Port to
	Chipstx.
	* src/openpgp.c (get_pinpad_input): Follow the change.
	* src/usb_ctrl.c (gnuk_setup_endpoints_for_interface): Don't stall
	RX of ENDP6.

2013-10-24  Niibe Yutaka  <gniibe@fsij.org>

	* src/Makefile.in (DEFS): Add -DCHX_PRIO_MAIN=5 for LED blink.